# TC029: Side Menu Top NavBar as Guest User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC029 - Side Menu Top Navbar Guest"
tags:
    - searchAndNav
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/Health/MinuteClinicSchedulingScreen.js
    - runScript: ../../screens/Menu/MenuScreen.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
---
- runFlow: ../../subflows/Common/launchApp.yaml
- runFlow: ../../subflows/Account/onboarding/h100_continue_to_sign_options.yaml
- tapOn: ${output.account_health100_onboarding.continueAsAGuest}
- runFlow: ../../subflows/Home/homescreen_loaded_successful.yaml

- waitForAnimationToEnd

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

- waitForAnimationToEnd
- assertVisible: ${output.common_buttons.messagesBtn}
- assertVisible: ${output.common_buttons.backBtn}

# Validating Messages Button Navigation
- runFlow: ../../subflows/SearchAndNav/validateMessagesButtonNavigation.yaml

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

# Validating Close Button Navigation
- waitForAnimationToEnd
- assertVisible: ${output.common_buttons.backBtn}
- tapOn: ${output.common_buttons.backBtn}
- assertNotVisible: ${output.common_buttons.backBtn}
