# TC032: Side Menu Pharmacy Dashboard as Guest User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC032 - Side Menu Pharmacy Dashboard Guest"
tags:
    - searchAndNav
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/Pharmacy/PharmacyScreen.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
---
- runFlow: ../../subflows/Common/launchApp.yaml
- runFlow: ../../subflows/Account/onboarding/h100_continue_to_sign_options.yaml
- tapOn: ${output.account_health100_onboarding.continueAsAGuest}
- runFlow: ../../subflows/Home/homescreen_loaded_successful.yaml

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

- assertVisible: ${output.menu_screen.pharmacyDashboardLnk}
- tapOn: ${output.menu_screen.pharmacyDashboardLnk}

- waitForAnimationToEnd
- assertVisible: ${output.pharmacy_prescriptions_sign_in.pharmacyHeader}
- assertVisible: ${output.pharmacy_prescriptions_sign_in.signIntoPrescriptionsAcctLabel}
- assertVisible: ${output.common_buttons.backBtn}
- tapOn: ${output.common_buttons.backBtn}
- waitForAnimationToEnd
