# TC045: Side Menu Help Center as Signed In User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC045 - Side Menu Help Center Signed In"
tags:
    - searchAndNav
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
    - runScript: ../../screens/SearchAndNav/SNAPPScreen.js
    - runScript:
        file: ../../config/credentials-loader.js
        env:
          loginData: DEAN_FANT
          BUILD_CONFIG: ${BUILD_CONFIG}
---
- runFlow: ../../subflows/Common/launchAndSetup.yaml
- runFlow: ../../subflows/Account/authentication/login.yaml
- runFlow: ../../subflows/Common/dismissOverlays.yaml

- waitForAnimationToEnd

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

- swipe:
    direction: UP

- assertVisible: ${output.menu_screen.helpCenterLnk}
- tapOn: ${output.menu_screen.helpCenterLnk}

- waitForAnimationToEnd
- runFlow:
    when:
      visible: ${output.common_buttons.closeBtn}
    commands:
      - tapOn: ${output.common_buttons.closeBtn}
- assertVisible: ${output.search_help_center.helpCenterTitle}
- assertVisible: ${output.snapp_navigation.helpCenterPopularQuestionsTitle}
- tapOn: ${output.common_buttons.backBtn}
- waitForAnimationToEnd
